hard-gists/6771295/run.log
=== Docker Run Log for 6771295 ===
Started at: Mi 29. Okt 16:42:57 CET 2025

[2025-10-29 16:42:57] START: Running container for 6771295
[2025-10-29 16:42:57] SUCCESS: Container 57f3e94896768fbcd336346c761677cbfdd12cdcd981902e7c2c908cd9f8bbd3 started for 6771295
=== Container logs for 6771295 ===
  File "/snippet.py", line 36
    print "access_token: %s" % credentials.access_token
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6771295 ===
[2025-10-29 16:43:00] INFO: Container 57f3e94896768fbcd336346c761677cbfdd12cdcd981902e7c2c908cd9f8bbd3 has stopped
